--- a/inlamningsuppgift3/.project
+++ b/inlamningsuppgift3/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>inlämningsuppgift3</name>
+	<name>inlamningsuppgift3</name>
 	<comment></comment>
 	<projects>
 	</projects>
